--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "dependencies": {},
   "devDependencies": {
     "eslint": "^6.6.0",
-    "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.4.0",
-    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsdoc": "^23.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "prettier": "1.19.1",
     "stylelint": "^12.0.0",
     "stylelint-config-prettier": "^6.0.0",
